<resources>
    <string name="app_name">我学习</string>
    <string name="regist">注册</string>
    <string name="denglu">登录</string>
    <string name="account">手机号/用户名/身份证号</string>
    <string name="wangjimima">忘记密码</string>
    <string name="gerenziliao">个人资料</string>
    <string name="yonghuxieyi">用户协议</string>
    <string name="account_bind">账户绑定</string>
    <string name="zhecebiaoshi">注册表示同意《5xuexi用户协议》</string>
    <string name="xuanzeyuanxiao">选择院校</string>

    <string name="DialogTitle">网络提醒</string>
    <string name="play_no_auth">课程错误提示</string>
    <string name="DialogText">当前网络为移动网络，是否继续播放</string>

    <string name="ZhangHaoDengLu">账号登录</string>
    <string name="XueHaoDengLu">学号登录</string>
    <string name="search">搜索院校名称</string>


    <!-- 自定义刷新组件 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <!-- 消除警告，可忽略 -->
    <string name="d">图片描述</string>

    <string name="datiguize">主观题\n
       (1) 答案要点化。即言简意赅，要点明确。科学规范，使用学科语言。\n
        (2) 要点段落化。即一个要点一个自然段。\n
        (3) 段落序号化。寄一个要点用一个序号标示，根据需要用序号（1）（2）（3）。
     </string>
    <string name="group">分组</string>
    <string name="all">全部</string>
    <!-- Refresh -->
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开立即刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <string name="user_name">sky</string>
    <string name="tv_loading">正加载,请稍后...</string>


    <string name="photos_num">%1$d张</string>
    <string name="msg_no_camera">没找到摄像头</string>
    <string name="commit">确定</string>
    <string name="commit_num">确定(%1$d/%2$d)</string>
</resources>
