<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--我学习图标,此控件已在代码中设置-->
    <RelativeLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/default_icon" />

        <!--账号登录/学号登录-->
        <RadioGroup
            android:layout_gravity="bottom"
            android:id="@+id/login_group"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingRight="2dp"
            android:paddingLeft="2dp"
            android:paddingBottom="3dp"
            android:weightSum="4"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="7dp"
                android:gravity="center"
                android:checked="true"
                android:textColor="@color/textcolor_greenormgray_selector"
                android:button="@null"
                android:text="@string/ZhangHaoDengLu"/>
            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="0dp"
                android:padding="7dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:button="@null"
                android:layout_weight="1"
                android:textColor="@color/textcolor_greenormgray_selector"
                android:text="@string/XueHaoDengLu"/>
        </RadioGroup>

        <!--下划线动画-->
       <RelativeLayout
           android:id="@+id/tran_container"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
           android:paddingLeft="10dp"
           android:paddingRight="10dp"
           android:gravity="center">
           <ImageView
               android:id="@+id/ivImage_Bottom"
               android:layout_width="match_parent"
               android:layout_height="1.5dp"
               android:background="@color/colorGreen"/>
       </RelativeLayout>
        <!--立即注册-->
        <Button
            android:id="@+id/login_regist"
            android:text="@string/regist"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:onClick="onclick"
            android:textSize="16sp"
            android:textColor="@color/colorGreen" />
    </RelativeLayout>


    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:orientation="vertical"
       android:layout_weight="1">

       <!--学校选择-->
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:visibility="gone"
           android:id="@+id/login_container_YuanXiao"
           android:padding="3dp">
           <ImageView
               android:id="@+id/login_XueIcon"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginLeft="5dp"
               android:src="@mipmap/school" />
           <Button
               android:onClick="onclick"
               android:id="@+id/login_YuanXiao"
               android:background="@null"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_alignBottom="@id/login_XueIcon"
               android:layout_alignTop="@id/login_XueIcon"
               android:layout_toRightOf="@id/login_XueIcon"
               android:textSize="14sp"
               android:gravity="center_vertical"
               android:hint="请选择院校"
               android:paddingLeft="2dp" />

           <ImageView
               android:layout_width="match_parent"
               android:layout_height="0.5dp"
               android:alpha="0.5"
               android:layout_below="@id/login_XueIcon"
               android:layout_marginTop="5dp"
               android:background="@color/colorGray" />
       </RelativeLayout>

        <!--用户名-->
        <com.sj.yinjiaoyun.xuexi.widget.NewEditView
            android:id="@+id/login_name"
            app:attr_edit_icon="@mipmap/icon_user"
            app:attr_edit_hint="@string/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--密码-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp">
            <ImageView
                android:id="@+id/login_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:src="@mipmap/icon_password" />
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/login_account"
                android:layout_alignTop="@id/login_account"
                android:layout_toRightOf="@id/login_account"
                android:background="@null"
                android:singleLine="true"
                android:inputType="textPassword"
                android:hint="密码"
                android:textSize="14sp"
                android:paddingLeft="2dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:alpha="0.5"
                android:layout_below="@id/login_account"
                android:layout_marginTop="5dp"
                android:background="@color/colorGray" />
        </RelativeLayout>


       <!--忘记密码-->
       <Button
           android:id="@+id/login_forget"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="right"
           android:layout_margin="10dp"
           android:alpha="0.7"
           android:background="@null"
           android:onClick="onclick"
           android:padding="6dp"
           android:textColor="@color/colorGreen"
           android:text="@string/wangjimima" />

       <!--登录-->
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_student_login"
            android:onClick="onclick"
            android:padding="10dp"
            android:text="@string/denglu"
            android:textColor="@color/colorWrite"
            android:textSize="16sp" />
        <RelativeLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_alignParentLeft="true"
                android:layout_width="120dp"
                android:layout_height="1dp"
                android:alpha="0.1"
                android:layout_centerVertical="true"
                android:background="@color/line"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_horizontal"
                android:textColor="@color/line"
                android:textSize="@dimen/sp_14"
                android:text="其他方式登录"/>

            <ImageView
                android:layout_alignParentRight="true"
                android:layout_width="120dp"
                android:layout_height="1dp"
                android:alpha="0.1"
                android:layout_centerVertical="true"
                android:background="@color/line"/>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_weixin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="微信"
                android:gravity="center"
                android:drawableTop="@mipmap/weixin_login"
                android:textSize="@dimen/sp_14"/>
            <TextView
                android:id="@+id/tv_qq"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="QQ"
                android:drawableTop="@mipmap/qq_login"
                android:textSize="@dimen/sp_14"/>

        </LinearLayout>
   </LinearLayout>



</LinearLayout>